# jigocoin-core

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  INCIDENTS.md  NETWORK-TOPOLOGY.md  README.md  ROADMAP.md  SECURITY.md  burned_supply.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  good_first_issue.yml  gui_issue.yml
assets/branding/: logo-meaning.md
contrib/seeds/: nodes_main.txt
doc/: README.md  jigocoin-networking.md  jigocoin-seed-node.md
doc/brand/: colors.md
doc/upstream/: README.md
docs/: INCIDENT_INDEX.md  address-format.md  build-instructions.md  chain-identity.md  incident_log.txt  monetary-policy.md  network-parameters.md  node-setup.md  philosophy.md  release-history.md  whitepaper.md
docs/incidents/: JGC-0001.md
src/: .clang-format  .clang-tidy  CMakeLists.txt  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  cluster_linearize.h  coins.cpp  coins.h  compressor.cpp  compressor.h  (+124 more)
src/bench/: CMakeLists.txt  addrman.cpp  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  bip324_ecdh.cpp  block_assemble.cpp  blockencodings.cpp  ccoins_caching.cpp  chacha20.cpp  checkblock.cpp  checkblockindex.cpp  checkqueue.cpp  cluster_linearize.cpp  coin_selection.cpp  connectblock.cpp  crypto_hash.cpp  descriptors.cpp  disconnected_transactions.cpp  duplicate_inputs.cpp  ellswift.cpp  examples.cpp  gcs_filter.cpp  hashpadding.cpp  index_blockfilter.cpp  load_external.cpp  lockedpool.cpp  logging.cpp  mempool_ephemeral_spends.cpp  mempool_eviction.cpp  mempool_stress.cpp  merkle_root.cpp  nanobench.cpp  obfuscation.cpp  parse_hex.cpp  peer_eviction.cpp  poly1305.cpp  pool.cpp  (+20 more)
src/common/: args.cpp  args.h  bloom.cpp  bloom.h  config.cpp  init.cpp  init.h  interfaces.cpp  messages.cpp  messages.h  netif.cpp  netif.h  pcp.cpp  pcp.h  run_command.cpp  run_command.h  settings.cpp  settings.h  signmessage.cpp  signmessage.h  system.cpp  system.h  types.h  url.cpp  url.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  stdin.cpp  stdin.h
src/consensus/: amount.h  consensus.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: CMakeLists.txt  aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha20poly1305.cpp  chacha20poly1305.h  common.h  hex_base.cpp  hex_base.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  muhash.cpp  muhash.h  poly1305.cpp  poly1305.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_arm_shani.cpp  sha256_avx2.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha256_x86_shani.cpp  sha3.cpp  sha3.h  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  db_key.h  disktxpos.h  txindex.cpp  txindex.h  txospenderindex.cpp  txospenderindex.h
src/init/: basic.cpp  common.cpp  common.h  jigocoin-gui.cpp  jigocoin-node.cpp  jigocoin-qt.cpp  jigocoin-wallet.cpp  jigocoind.cpp
src/interfaces/: README.md  chain.h  echo.h  handler.h  init.h  ipc.h  mining.h  node.h  rpc.h  types.h  wallet.h
src/ipc/: CMakeLists.txt  context.h  exception.h  interfaces.cpp  process.cpp  process.h  protocol.h  stub.cpp
src/ipc/test/: CMakeLists.txt  ipc_test.capnp  ipc_test.cpp  ipc_test.h  ipc_test_types.h  ipc_tests.cpp
src/kernel/: CMakeLists.txt  bitcoinkernel_wrapper.h  blockmanager_opts.h  caches.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.cpp  coinstats.h  context.cpp  context.h  cs_main.cpp  cs_main.h  disconnected_transactions.cpp  disconnected_transactions.h  jigocoinkernel.cpp  jigocoinkernel.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_removal_reason.cpp  mempool_removal_reason.h  messagestartchars.h  notifications_interface.h  types.h  warning.h
src/logging/: categories.h  (+1 more)
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  optiontests.cpp  optiontests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.cpp  util.h  wallettests.cpp  wallettests.h
src/zmq/: CMakeLists.txt  zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h  zmqrpc.cpp  zmqrpc.h  zmqutil.cpp  zmqutil.h
tools/: check_orchestrator_addresses.sh  find_jgc_addresses.py  find_jgc_addresses_v2.py  jgc_auto_fix_nodes.py  jgc_auto_fix_nodes_v2.py  jgc_forensic_scan.sh  jgc_node2_timeline.sh  jgc_record_incident.py  jgc_supply_status.sh  jgc_transfer_orchestrator_v10.py  jgc_transfer_orchestrator_v11.py  jgc_transfer_orchestrator_v12.py  jgc_transfer_orchestrator_v13.py  jgc_transfer_orchestrator_v14.py  jgc_transfer_orchestrator_v15.py  jgc_transfer_orchestrator_v16.py  jgc_transfer_orchestrator_v17.py  jgc_transfer_orchestrator_v18.py  jgc_transfer_orchestrator_v19.py  jgc_transfer_orchestrator_v2.py  jgc_transfer_orchestrator_v20.py  jgc_transfer_orchestrator_v20_1.py  jgc_transfer_orchestrator_v21.py  jgc_transfer_orchestrator_v21_2.py  jgc_transfer_orchestrator_v22.py  jgc_transfer_orchestrator_v22_1.py  jgc_transfer_orchestrator_v22_2.py  jgc_transfer_orchestrator_v22_3.py  jgc_transfer_orchestrator_v22_4.py  jgc_transfer_orchestrator_v22_5.py  jgc_transfer_orchestrator_v22_6.py  jgc_transfer_orchestrator_v22_7.py  jgc_transfer_orchestrator_v23.py  jgc_transfer_orchestrator_v5.py  jgc_transfer_orchestrator_v7.py  jgc_transfer_orchestrator_v8.py  jgc_transfers.log.old  jgc_wallet_balances.py
(+990 files in other folders)
